--- a/scripts/1_triples.ipynb
+++ b/scripts/1_triples.ipynb
@@ -31,24 +31,16 @@
     "import unicodedata\n",
     "import shutil\n",
     "import json\n",
+    "import sys\n",
     "import os\n",
     "\n",
     "from spacy.tokens import Doc, Span, DocBin, Token\n",
     "import en_core_web_lg\n",
     "import pandas as pd\n",
     "\n",
+    "sys.path.insert(0, '../')\n",
+    "\n",
     "import pathvecs.matchers as matchers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "15e6d9ad-ee05-4213-996e-057644ee88f1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO config this\n",
-    "data_path = Path(matchers.__file__).parents[2].joinpath('data')"
    ]
   },
   {
@@ -187,7 +179,7 @@
    "id": "3de8226e-e9b5-49e6-91d5-f0d08a5f3106",
    "metadata": {},
    "source": [
-    "### Configuration"
+    "### Config"
    ]
   },
   {
@@ -197,6 +189,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Place where the pipeline artifacts are going\n",
+    "data_path = Path('../').resolve().joinpath('data')\n",
+    "\n",
     "# Name of the input parse folder in data/parses\n",
     "dataset = 'wikipedia_20220101'\n",
     "\n",
@@ -297,9 +292,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (path2vec)",
+   "display_name": "pathvecs-kernel",
    "language": "python",
-   "name": "path2vec"
+   "name": "pathvecs-kernel"
   },
   "language_info": {
    "codemirror_mode": {
@@ -311,7 +306,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.8"
   },
   "toc-showcode": false,
   "toc-showtags": false
