--- a/scripts/2_vocabs.ipynb
+++ b/scripts/2_vocabs.ipynb
@@ -35,6 +35,7 @@
    "cell_type": "markdown",
    "id": "debace05-7c5c-4663-b4a5-12f81bb3a439",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -49,23 +50,10 @@
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
-    "import os\n",
+    "import sys\n",
     "\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "\n",
-    "import pathvecs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5243ee11-0993-4708-97bb-1863c95c2a97",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO config this\n",
-    "data_path = Path(pathvecs.__file__).parents[1].joinpath('data')"
+    "import numpy as np"
    ]
   },
   {
@@ -85,6 +73,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Place where the pipeline artifacts are going. default: {project}/data\n",
+    "data_path = Path('../').resolve().joinpath('data')\n",
+    "\n",
     "# Name of the input triples folder in data/triples\n",
     "dataset = 'wikipedia_20220101'\n",
     "\n",
@@ -209,9 +200,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (path2vec)",
+   "display_name": "pathvecs-kernel",
    "language": "python",
-   "name": "path2vec"
+   "name": "pathvecs-kernel"
   },
   "language_info": {
    "codemirror_mode": {
@@ -223,7 +214,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
