--- a/scripts/2_vocabs.ipynb
+++ b/scripts/2_vocabs.ipynb
@@ -35,7 +35,6 @@
    "cell_type": "markdown",
    "id": "debace05-7c5c-4663-b4a5-12f81bb3a439",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -50,10 +49,14 @@
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
+    "from collections import Counter\n",
     "import sys\n",
+    "import os\n",
     "\n",
+    "from tqdm.notebook import tqdm\n",
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import torch"
    ]
   },
   {
@@ -80,7 +83,7 @@
     "dataset = 'wikipedia_20220101'\n",
     "\n",
     "# Required instances for a word or context to be included in a vocabulary\n",
-    "K = 50"
+    "K = 100"
    ]
   },
   {
@@ -90,7 +93,11 @@
     "tags": []
    },
    "source": [
-    "### Load"
+    "### Load\n",
+    "In order to circumvent memory limits on a single machine, the word-context</br>\n",
+    "pair dataset has to be constructed as pairs of mapped integers. This makes</br>\n",
+    "it necessary to perform a first pass over the triples files to compute the</br>\n",
+    "(un-pruned) vocabularies</br>"
    ]
   },
   {
@@ -100,19 +107,131 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# duplicate and interleave entries, as each triple corresponds to two pairs\n",
-    "# TODO: may need to do this with integer representations for larger datasets\n",
-    "wc_pairs = []\n",
+    "# TODO map-reduce this\n",
+    "wcounts = Counter()\n",
+    "ccounts = Counter()\n",
     "triples_files = list(data_path.joinpath('triples', dataset).glob('*.df'))\n",
     "\n",
-    "for fp in triples_files:\n",
+    "for fp in tqdm(triples_files):\n",
     "    triples = pd.read_parquet(fp, engine='fastparquet')\n",
     "    for src, edge, dst in zip(triples['src'], triples['path'], triples['dst']):\n",
-    "    \n",
-    "        wc_pairs.append((src, dst + '/' + edge))\n",
-    "        wc_pairs.append((dst, src + '/' + edge + '-1'))\n",
+    "        \n",
+    "        wcounts[src] += 1\n",
+    "        wcounts[dst] += 1\n",
+    "        ccounts[dst + '/' + edge] += 1\n",
+    "        ccounts[src + '/' + edge + '-1'] += 1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b1bbc82-cac6-4763-9b68-8852c00d9405",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wvocab = {}\n",
+    "for wi, (word, count) in enumerate(wcounts.most_common()):\n",
+    "    if count < K:\n",
+    "        break\n",
+    "    wvocab[word] = wi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d4e8c881-3338-461c-9e87-8de91d4c3612",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cvocab = {}\n",
+    "for ci, (context, count) in enumerate(ccounts.most_common()):\n",
+    "    if count < K:\n",
+    "        break\n",
+    "    cvocab[context] = ci"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c437b864-0145-4a07-be0c-9be3be7f636b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max_table_size = max(\n",
+    "    sum(v for v in wcounts.values() if v >= K),\n",
+    "    sum(v for v in ccounts.values() if v >= K)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "470b9396-d0b2-4281-af5d-834ba8b0312f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max_table_size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f1552bde-ff2e-4078-9f01-77bb1c6e5dd2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wc_pairs = np.zeros((max_table_size, 2), dtype=np.int32)\n",
+    "wc_pairs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d86c1408-0ec5-4301-a751-f4a03bbcc5cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Only load pairs where both word and context are possibly in vocab\n",
+    "triples_files = list(data_path.joinpath('triples', dataset).glob('*.df'))\n",
     "\n",
-    "wc_pairs = pd.DataFrame(wc_pairs, columns=['word', 'context'])\n",
+    "row = 0\n",
+    "for fp in tqdm(triples_files):\n",
+    "    triples = pd.read_parquet(fp, engine='fastparquet')\n",
+    "    for src, edge, dst in zip(triples['src'], triples['path'], triples['dst']):\n",
+    "\n",
+    "        src_context = dst + '/' + edge\n",
+    "        if src in wvocab and src_context in cvocab:\n",
+    "            wi = wvocab[src]\n",
+    "            ci = cvocab[src_context]\n",
+    "            wc_pairs[row] = [wi, ci]\n",
+    "            row += 1\n",
+    "\n",
+    "        dst_context = src + '/' + edge + '-1'\n",
+    "        if dst in wvocab and dst_context in cvocab:\n",
+    "            wi = wvocab[dst]\n",
+    "            ci = cvocab[dst_context]\n",
+    "            wc_pairs[row] = [wi, ci]\n",
+    "            row += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7015d49c-4f73-40c3-a517-01809436f622",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wc_pairs = wc_pairs[:row]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dfaa25eb-d742-4d0b-bdb0-58f0e648c730",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wc_pairs = pd.DataFrame(wc_pairs, columns=['wi', 'ci'])\n",
     "wc_pairs"
    ]
   },
@@ -125,7 +244,8 @@
     "The arrangement of word,context pairs makes this a big bipartite graph, and </br>\n",
     "removing a word 'node' or a context 'node' from that graph could result in </br>\n",
     "its' neighbors falling below the frequency threshold. So prune iteratively until</br>\n",
-    "this doesn't happen.</br>"
+    "this doesn't happen.</br>\n",
+    "This treatment of the threshold isn't *explicit*"
    ]
   },
   {
@@ -135,18 +255,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pruning = True\n",
-    "while pruning:\n",
+    "# pruning = True\n",
+    "# while pruning:\n",
     "\n",
-    "    len_before = len(wc_pairs)\n",
+    "#     len_before = len(wc_pairs)\n",
     "    \n",
-    "    wc_pairs['w_count'] = wc_pairs['word'].map(wc_pairs['word'].value_counts())\n",
-    "    wc_pairs['c_count'] = wc_pairs['context'].map(wc_pairs['context'].value_counts())\n",
-    "    wc_pairs = wc_pairs.loc[(wc_pairs['w_count'] >= K) & (wc_pairs['c_count'] >= K)]\n",
+    "#     wc_pairs['w_count'] = wc_pairs['word'].map(wc_pairs['word'].value_counts())\n",
+    "#     wc_pairs['c_count'] = wc_pairs['context'].map(wc_pairs['context'].value_counts())\n",
+    "#     wc_pairs = wc_pairs.loc[(wc_pairs['w_count'] >= K) & (wc_pairs['c_count'] >= K)]\n",
     "    \n",
-    "    num_removed = len_before - len(wc_pairs)\n",
-    "    print(\"Removed {:,} pairs below frequency threshold.\".format(num_removed))\n",
-    "    pruning = (num_removed != 0)"
+    "#     num_removed = len_before - len(wc_pairs)\n",
+    "#     print(\"Removed {:,} pairs below frequency threshold.\".format(num_removed))\n",
+    "#     pruning = (num_removed != 0)"
    ]
   },
   {
@@ -154,7 +274,32 @@
    "id": "a8ed10c2-6e0b-43fe-b550-136e8ba9dfdb",
    "metadata": {},
    "source": [
-    "### Save Vocab Files"
+    "### Save Vocab Files And Mapped Pairs Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85438ea6-92e2-4374-bf35-2eb6d131933e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Will overwrite existing pairs dataset\n",
+    "output_folder = data_path.joinpath('pairs', dataset)\n",
+    "if not os.path.isdir(output_folder):\n",
+    "    os.mkdir(output_folder)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2db3ff8b-5158-426f-a9ab-0a4f0c7b65d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pairs_file = data_path.joinpath('pairs', dataset, 'pairs.pt')\n",
+    "pairs = torch.tensor(wc_pairs[['wi', 'ci']].values)\n",
+    "torch.save(pairs, pairs_file)"
    ]
   },
   {
@@ -177,10 +322,11 @@
    "outputs": [],
    "source": [
     "# Will overwrite any existing vocab for the dataset\n",
-    "wvocab_file = data_path.joinpath('vocab', dataset, 'wvocab.npy')\n",
-    "wc_pairs.sort_values('w_count', ascending=False, inplace=True)\n",
-    "wvocab = wc_pairs['word'].unique()\n",
-    "np.save(wvocab_file, wvocab)"
+    "wvocab_file = data_path.joinpath('vocab', dataset, 'wvocab.txt')\n",
+    "with open(wvocab_file, 'w+') as outfile:\n",
+    "    for word in wvocab:\n",
+    "        outfile.write(word)\n",
+    "        outfile.write('\\n')"
    ]
   },
   {
@@ -191,10 +337,11 @@
    "outputs": [],
    "source": [
     "# Will overwrite any existing vocab for the dataset\n",
-    "cvocab_file = data_path.joinpath('vocab', dataset, 'cvocab.npy')\n",
-    "wc_pairs.sort_values('c_count', ascending=False, inplace=True)\n",
-    "cvocab = wc_pairs['context'].unique()\n",
-    "np.save(cvocab_file, cvocab)"
+    "cvocab_file = data_path.joinpath('vocab', dataset, 'cvocab.txt')\n",
+    "with open(cvocab_file, 'w+') as outfile:\n",
+    "    for context in cvocab:\n",
+    "        outfile.write(context)\n",
+    "        outfile.write('\\n')"
    ]
   }
  ],
